--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,5 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: beige;
+    background-color: rgba(201, 0, 227, 0.395);
 }
